# STM32F4xx_template

./: CMakeLists.txt
Core/src/: main.c  main.cpp
Drivers/CMSIS/Core/Include/: cmsis_version.h  system_stm32f4xx.h
stm32f407-template/: CMakeLists.txt  arm-gcc-toolchain.cmake
stm32f407-template/Core/: startup_stm32f407xx.s
stm32f407-template/Core/src/: system_stm32f4xx.c
